log
Fri Mar 26 19:30:41 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:10: error: variable ‘Lista’ set but not used [-Werror=unused-but-set-variable]
   List * Lista;
          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:30:58 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:9: error: variable ‘Lista’ set but not used [-Werror=unused-but-set-variable]
   List *Lista;
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:39:42 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ee3cec2
Sun Mar 28 23:04:03 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
79cfc69
Sun Mar 28 23:57:15 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7d95d3b
Mon Mar 29 23:49:32 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2a1cb92
Mon Mar 29 23:50:36 UTC 2021: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
9f26b3a
